# shuio

./: CMakeLists.txt  LICENSE  README.md  xmake.lua
example/: CMakeLists.txt  linux_test.cpp  sio.cpp
example/bench_http_wrk/: bench_http_wrk.cpp
example/co_test/: co_result.hpp  co_test.cpp
example/pingpong/: client.cpp  server.cpp
shuio/: shu_acceptor.h  shu_buffer.cpp  shu_buffer.h  shu_client.h  shu_common.h  shu_loop.h  shu_server.h  shu_socket.h  shu_stream.h  shuio.h
shuio/linux/: linux_detail.cpp  linux_detail.h  shu_acceptor.cpp  shu_buffer.cpp  shu_client.cpp  shu_common.cpp  shu_loop.cpp  shu_server.cpp  shu_socket.cpp  shu_stream.cpp
shuio/win32/: shu_acceptor.cpp  shu_buffer.cpp  shu_client.cpp  shu_common.cpp  shu_loop.cpp  shu_server.cpp  shu_socket.cpp  shu_stream.cpp  win32_detail.cpp  win32_detail.h
src/: shu_buffer.cpp  shu_buffer.h  shu_common.cpp  shu_common.h  shu_loop.cpp  shu_loop.h  shu_server.cpp  shu_socket.cpp  shu_socket.h  shu_stream.cpp  shu_stream.h  sio.cpp  win32_detail.cpp  win32_detail.h
